--- a/DNS_update/config-files/dns-update.conf
+++ b/DNS_update/config-files/dns-update.conf
@@ -1,5 +1,5 @@
-Host: test1.jvnetworks.net
+Host: <full hostname here>
 Token: <token here>
-Account:10312
-Domain: jvnetworks.net
-dns-server: 8.8.8.8
+Account:<Account nuber>
+Domain: <domain here>
+dns-server: <Optional to add DNS server for script to use to resolve>
